tests/sealed_tvars/sealed_tvars.exp
Error ------------------------------------------------------------------------------------------ regression_tests.js:3:1

Internal error: read of Env_api.Make.FunctionThisLoc entry which has not been prepared for typechecking

      v-------------------------------------------
   3| function no_missing_env_entry_for_delete() {
   4|   declare var foo: {bar: string | void};
   5|   delete foo.bar; // ok
   6|   (foo.bar: void); // ok
   7| }
      ^


Error ------------------------------------------------------------------------------------------ regression_tests.js:9:1

Internal error: read of Env_api.Make.FunctionThisLoc entry which has not been prepared for typechecking

       v---------------------------------------------------------
    9| function no_missing_env_entry_for_illegal_type_binding() {
   10|   type A = number;
   11|   type A = number; // error, but no MissingEnvEntry internal error.
   12| }
       ^


Error ----------------------------------------------------------------------------------------- regression_tests.js:11:8

Cannot declare `A` [1] because the name is already bound. [name-already-bound]

   regression_tests.js:11:8
   11|   type A = number; // error, but no MissingEnvEntry internal error.
              ^

References:
   regression_tests.js:10:8
   10|   type A = number;
              ^ [1]


Error ----------------------------------------------------------------------------------------- regression_tests.js:14:1

Internal error: read of Env_api.Make.FunctionThisLoc entry which has not been prepared for typechecking

       v--------------------------------------
   14| function unresolved_class_self_tvar() {
   15|   class C { } // no weird unresolved tvar error
   16| }
       ^


Error ---------------------------------------------------------------------------------------- regression_tests.js:21:17

Missing an annotation on return. [missing-local-annot]

   21|   constructor () {
                       


Error ----------------------------------------------------------------------------------------- regression_tests.js:24:3

Missing an annotation on property `a`. [missing-local-annot]

   24|   a;
         ^^


Error ----------------------------------------------------------------------------------------- regression_tests.js:27:4

Missing an annotation on property `d`. [missing-local-annot]

   27|   d = 42 + 42;
          


Error ---------------------------------------------------------------------------------------- regression_tests.js:30:18

Missing an annotation on return. [missing-local-annot]

   30|   g = (x: number) => { return 42 }
                        


Error ----------------------------------------------------------------------------------------- regression_tests.js:33:6

Missing an annotation on return. [missing-local-annot]

   33|   j() { return 42 }
            


Error ----------------------------------------------------------------------------------------- regression_tests.js:44:1

Internal error: read of Env_api.Make.FunctionThisLoc entry which has not been prepared for typechecking

   44| function UnannotParams(x, {a, b}, ...y) { }
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- regression_tests.js:44:24

Missing an annotation on `x`. [missing-local-annot]

   44| function UnannotParams(x, {a, b}, ...y) { }
                              ^


Error ---------------------------------------------------------------------------------------- regression_tests.js:44:27

Missing an annotation on destructuring. [missing-local-annot]

   44| function UnannotParams(x, {a, b}, ...y) { }
                                 ^^^^^^


Error ---------------------------------------------------------------------------------------- regression_tests.js:44:38

Missing an annotation on rest parameter `y`. [missing-local-annot]

   44| function UnannotParams(x, {a, b}, ...y) { }
                                            ^


Error ---------------------------------------------------------------------------------------- regression_tests.js:54:14

Cannot cast `42` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   regression_tests.js:54:14
   54| (((42: any): ModScope): empty); // string ~> empty, not num ~> empty
                    ^^^^^^^^ [1]

References:
   regression_tests.js:54:25
   54| (((42: any): ModScope): empty); // string ~> empty, not num ~> empty
                               ^^^^^ [2]


Error ---------------------------------------------------------------------------------------- regression_tests.js:61:30

Cannot resolve name `ModScope2`. [cannot-resolve-name]

   61| declare var NonexistentType: ModScope2;
                                    ^^^^^^^^^


Error ---------------------------------------------------------------------------------------- regression_tests.js:64:23

string [1] is not a number. [incompatible-use]

   regression_tests.js:64:23
   64| const ResultOfError = -AString;
                             ^^^^^^^^

References:
   regression_tests.js:63:22
   63| declare var AString: string;
                            ^^^^^^ [1]



Found 16 errors
